# cpp-micro-service

./: .clang-format  .gitignore  Dockerfile  Jenkinsfile  README.md  conanfile.txt
.github/workflows/: build.yml  docker.yml
source/: CMakeLists.txt
source/etc/: build.py  conan.alpine.profile  conan.microservice.profile
source/lib/: CMakeLists.txt
source/lib/api/: CMakeLists.txt
source/lib/api/include/: IRouteRegistry.h  IRouter.h
source/lib/api/source/: IRouter.cpp
source/lib/common/: CMakeLists.txt
source/lib/common/include/: CRouteRegistry.h  CRouter.h
source/lib/common/source/: CRouteRegistry.cpp  CRouter.cpp
source/lib/test/: CMakeLists.txt
source/lib/test/source/: IntegrationTest.cpp  main.cpp
source/lib/testsupport/: CMakeLists.txt
source/lib/testsupport/include/: RequestHandler.h  SocketUtility.h  TestClientServer.h
source/lib/testsupport/source/: SocketUtility.cpp  TestClientServer.cpp
source/lib/utility/: CMakeLists.txt
source/lib/utility/include/: CInterruptHandler.hpp
source/lib/utility/source/: CInterruptHandler.cpp
source/service/: CMakeLists.txt
source/service/front/: CMakeLists.txt
source/service/front/etc/: run.sh
source/service/front/source/: main.cpp
source/service/source/: main.cpp
